# Autonomous-robot

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  package-lock.json  start_robot.sh  start_system.sh  start_web.sh  start_zenoh.sh  starting-project.sh
client/: .gitignore  karma.conf.js  package-lock.json  package.json
client/src/: main.ts  styles.scss
client/src/environments/: environment.ts
common/enums/: sockets-events.ts
common/interfaces/: map.ts  mission-log-entry.ts  occupancy-grid.ts
docker/: Dockerfile.client  Dockerfile.gateway  Dockerfile.ros  Dockerfile.server  entrypoint.robot.sh  start-client.sh  start-server-sim.sh
project_ws/: frames_2025-10-24_14.18.27.gv  frames_2025-10-24_14.21.33.gv  frames_2025-10-24_14.33.55.gv  frames_2025-10-24_21.58.50.gv
project_ws/install/: local_setup.sh  setup.sh
project_ws/log/: latest_build
project_ws/src/: README.md
project_ws/src/domain_bridge-humble/: CMakeLists.txt
project_ws/src/identifier/: package.xml  setup.cfg  setup.py
project_ws/src/limo_interfaces/: CMakeLists.txt  package.xml
project_ws/src/limo_interfaces/action/: DoMission.action
project_ws/src/limo_interfaces/msg/: RobotState.msg
project_ws/src/limo_interfaces/srv/: GetScript.srv  SaveScript.srv  SetRobotState.srv
project_ws/src/robot_exploration/: package.xml  setup.py
project_ws/src/simulation_application/: package.xml  (+1 more)
server/: .env  package-lock.json  package.json
server/app/: app.module.ts  index.ts
server/install/: local_setup.sh  setup.sh
server/log/: latest_build
server/types/: angular-common-http.d.ts
weekly-reports/: week1.md
(+248 files in other folders)
