<?xml version="1.0"?>
<package format="3">
  <name>limo_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces pour robots Limo (actions + services)</description>

  <maintainer email="felix.paille-dowell@polymtl.ca">scoobyfelix</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
